Añadidos los dashboard por empresa